--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@pinia/testing": "^0.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "@vitejs/plugin-vue": "^2.3.3",
