--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "prepare": "husky install",
     "lint:eslint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:prettier": "prettier .  --write",
-    "lint:style": "npm run lint:style:vue & npm run lint:style:scss",
-    "lint:style:vue": "stylelint src/**/*.vue --custom-syntax postcss-html",
-    "lint:style:scss": "stylelint src/**/*.scss --custom-syntax postcss-scss",
-    "lint:all": "npm run lint:eslint & npm run lint:prettier & npm run lint:style",
+    "lint:styles": "stylelint **/*.{scss,vue}",
+    "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
+    "lint:all": "npm run lint:eslint & npm run lint:prettier & npm run lint:styles",
     "lint:markup": "vue-tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -49,9 +48,8 @@
     "pretty-quick": "^3.1.3",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
-    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^26.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
