--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "lint:eslint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lint:prettier": "prettier .  --write",
+    "lint:js": "eslint --ext \".ts,.js,.vue\" .",
+    "lintfix:js": "eslint --fix --ext \".ts,.js,.vue\" .",
     "lint:styles": "stylelint **/*.{scss,vue}",
     "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
-    "lint:all": "npm run lint:eslint & npm run lint:prettier & npm run lint:styles",
+    "lint:prettier": "prettier --check .",
+    "lintfix:prettier": "prettier --write --list-different .",
     "lint:markup": "vue-tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "cypress:open": "cypress open",
-    "pretty-quick": "pretty-quick --staged"
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "pinia": "^2.0.14",
@@ -42,10 +42,10 @@
     "eslint-plugin-vue": "^9.1.1",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
+    "lint-staged": "^13.0.3",
     "postcss-html": "^1.4.1",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
     "stylelint-config-recommended-scss": "^7.0.0",
