--- a/package.json
+++ b/package.json
@@ -26,45 +26,46 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "update:packages": "npx npm-check-updates"
   },
   "dependencies": {
-    "pinia": "^2.0.14",
-    "vue": "^3.2.25",
-    "vue-i18n": "^9.1.10"
+    "pinia": "^2.0.22",
+    "vue": "^3.2.39",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
-    "@pinia/testing": "^0.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitest/ui": "^0.17.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.0.0",
+    "@commitlint/cli": "^17.1.2",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@pinia/testing": "^0.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vitest/ui": "^0.23.2",
+    "@vue/eslint-config-typescript": "^11.0.1",
+    "@vue/test-utils": "^2.0.2",
     "commitlint-config-jira": "^1.6.4",
     "commitlint-plugin-jira-rules": "^1.6.4",
-    "cypress": "^10.3.0",
-    "eslint": "^8.19.0",
+    "cypress": "^10.8.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "husky": "^8.0.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "husky": "^8.0.1",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
-    "postcss-html": "^1.4.1",
-    "postcss-scss": "^4.0.4",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
-    "sass": "^1.53.0",
-    "stylelint": "^14.9.1",
+    "sass": "^1.54.9",
+    "stylelint": "^14.11.0",
     "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vite-plugin-eslint": "^1.6.1",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.17.0",
-    "vue-tsc": "^0.35"
+    "vitest": "^0.23.2",
+    "vue-tsc": "^0.40"
   }
 }
