Patch 0.0.7 unit tests, upgrade packages and fonts (#17)

--- a/package.json
+++ b/package.json
@@ -27,45 +27,47 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "packages-check-updates": "npx npm-check-updates",
+    "packages-update": "npx npm-check-updates -u"
   },
   "dependencies": {
-    "pinia": "^2.0.22",
-    "vue": "^3.2.39",
+    "pinia": "^2.0.23",
+    "vue": "^3.2.40",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@pinia/testing": "^0.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "@vitest/ui": "^0.23.2",
-    "@vue/eslint-config-typescript": "^11.0.1",
-    "@vue/test-utils": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitest/ui": "^0.24.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.1.0",
     "commitlint-config-jira": "^1.6.4",
     "commitlint-plugin-jira-rules": "^1.6.4",
-    "cypress": "^10.8.0",
-    "eslint": "^8.23.1",
+    "cypress": "^10.9.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
-    "jsdom": "^20.0.0",
+    "jsdom": "^20.0.1",
     "lint-staged": "^13.0.3",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9",
-    "stylelint": "^14.11.0",
+    "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
     "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.1",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.6",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.23.2",
-    "vue-tsc": "^0.40"
+    "vite-tsconfig-paths": "^3.5.1",
+    "vitest": "^0.24.0",
+    "vue-tsc": "^1.0"
   }
 }
