--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,12 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
-    "types": ["@intlify/vite-plugin-vue-i18n/client", "vite/client", "cypress"],
+    "types": [
+      "@intlify/vite-plugin-vue-i18n/client",
+      "vite/client",
+      "cypress",
+      "node"
+    ],
     "baseUrl": "./src/",
     "paths": {
       "@/*": ["*"],
@@ -22,6 +27,6 @@
       "@Views/*": ["Views/*"]
     }
   },
-  "include": ["./src"],
+  "include": ["./src", "cypress.d.ts", "./cypress"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
