--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-vue-markdown": "^0.22.4",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.29.2",
     "vue-tsc": "^1.2"
