--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ concurrency:
 
 jobs:
   install-cache:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [18.12.0]
@@ -40,7 +40,7 @@ jobs:
         run: npm install --force --non-interactive
 
   type-check:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -65,7 +65,7 @@ jobs:
         run: npm run typecheck
 
   eslint-lint:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -90,7 +90,7 @@ jobs:
         run: 'npm run lint:js'
 
   prettier-lint:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -115,7 +115,7 @@ jobs:
         run: 'npm run lint:prettier'
 
   stylelint-lint:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -140,7 +140,7 @@ jobs:
         run: 'npm run lint:styles'
 
   vitest-tests:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -167,7 +167,7 @@ jobs:
         run: 'npm run test:run'
 
   build:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node:
@@ -192,7 +192,7 @@ jobs:
         run: npm run build
 
   # cypress-tests:
-  #   runs-on: linux-latest
+  #   runs-on: ubuntu-latest
   #   strategy:
   #     matrix:
   #       node:
