--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on:
   workflow_dispatch:
+    pull_request:
+      branches:
+        - master
     inputs:
       reason:
         description: 'Why are you running manually?'
