--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
-    pull_request:
-      branches:
-        - master
     inputs:
       reason:
         description: 'Why are you running manually?'
@@ -186,29 +186,29 @@ jobs:
       - name: Build Application
         run: npm run build
 
-  # cypress-tests:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       node:
-  #         - 18.12.0
-  #   needs:
-  #     - build
-  #   steps:
-  #     - name: Checkout Commit
-  #       uses: actions/checkout@v3.5.0
-  #     - name: 'Install Node.js ${{ matrix.node }}'
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '${{ matrix.node }}'
-  #     - name: Restore npm dependencies
-  #       uses: actions/cache@v3
-  #       id: cache-dependencies
-  #       with:
-  #         path: node_modules
-  #         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: ${{ runner.os }}-node-
-  #     - name: Run Cypress tests
-  #       run: 'npm run cypress:run'
-  #       env:
-  #         CYPRESS_BASE_URL: 'http://localhost:3000'
+  cypress-tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 18.12.0
+    needs:
+      - build
+    steps:
+      - name: Checkout Commit
+        uses: actions/checkout@v3.5.0
+      - name: 'Install Node.js ${{ matrix.node }}'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '${{ matrix.node }}'
+      - name: Restore npm dependencies
+        uses: actions/cache@v3
+        id: cache-dependencies
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Run Cypress tests
+        run: 'npm run cypress:run'
+        env:
+          CYPRESS_BASE_URL: 'http://localhost:3000'
