change name of job and add more default command timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Build Application
         run: npm run build
 
-  cypress-tests:
+  cypress-component-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
