--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -234,6 +234,8 @@ jobs:
 
   deploy-preview:
     runs-on: ubuntu-latest
+    needs:
+      - cypress-component-tests
     steps:
       - uses: actions/checkout@v3.5.0
       - name: Install Vercel CLI
