--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,8 @@
-name: CI
+name: CI/CD
+
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
   pull_request:
@@ -10,10 +14,6 @@ on:
         description: 'Why are you running manually?'
         required: true
 
-concurrency:
-  group: ${{ github.head_ref }}
-  cancel-in-progress: true
-
 jobs:
   install-cache:
     runs-on: ubuntu-latest
@@ -22,7 +22,7 @@ jobs:
         node-version: [18.12.0]
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -34,6 +34,13 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
+      - name: Cache Cypress binary
+        id: cache-cypress-binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-binary-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: cypress-binary-
       - name: Install Dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: npm install --force --non-interactive
@@ -48,7 +55,7 @@ jobs:
       - install-cache
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -73,7 +80,7 @@ jobs:
       - type-check
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -98,7 +105,7 @@ jobs:
       - type-check
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -123,7 +130,7 @@ jobs:
       - type-check
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -150,7 +157,7 @@ jobs:
       - stylelint-lint
     steps:
       - name: Checkout Commit
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -175,7 +182,7 @@ jobs:
       - vitest-tests
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.7.0
+        uses: actions/checkout@v3.5.0
       - name: 'Install Node.js ${{ matrix.node }}'
         uses: actions/setup-node@v3
         with:
@@ -190,29 +197,52 @@ jobs:
       - name: Build Application
         run: npm run build
 
-  # cypress-tests:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       node:
-  #         - 18.12.0
-  #   needs:
-  #     - build
-  #   steps:
-  #     - name: Checkout Commit
-  #       uses: actions/checkout@v2.7.0
-  #     - name: 'Install Node.js ${{ matrix.node }}'
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '${{ matrix.node }}'
-  #     - name: Restore npm dependencies
-  #       uses: actions/cache@v3
-  #       id: cache-dependencies
-  #       with:
-  #         path: node_modules
-  #         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: ${{ runner.os }}-node-
-  #     - name: Run Cypress tests
-  #       run: 'npm run cypress:run'
-  #       env:
-  #         CYPRESS_BASE_URL: 'http://localhost:3000'
+  cypress-component-tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 18.12.0
+    needs:
+      - build
+    steps:
+      - name: Checkout Commit
+        uses: actions/checkout@v3.5.0
+      - name: 'Install Node.js ${{ matrix.node }}'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '${{ matrix.node }}'
+      - name: Restore npm dependencies
+        uses: actions/cache@v3
+        id: cache-dependencies
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Restore Cypress binary
+        id: cache-cypress-binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-binary-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: cypress-binary-
+      - name: Run Cypress test
+        uses: cypress-io/github-action@v5
+        with:
+          component: true
+          command: npm run cypress:run
+
+  deploy-preview:
+    runs-on: ubuntu-latest
+    needs:
+      - cypress-component-tests
+    steps:
+      - uses: actions/checkout@v3.5.0
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
