--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --component --browser chrome",
     "packages-check-updates": "npx npm-check-updates",
-    "packages-update": "npx npm-check-updates -u"
+    "packages-update": "npx npm-check-updates -u",
+    "docs:dev": "vuepress dev src/documentation --config src/documentation/vuepress.config.ts",
+    "docs:build": "vuepress build src/documentation --config src/documentation/vuepress.config.ts"
   },
   "dependencies": {
     "pinia": "^2.0.33",
@@ -64,6 +66,7 @@
     "vite-plugin-vue-markdown": "^0.22.4",
     "vite-tsconfig-paths": "^4.0.7",
     "vitest": "^0.29.8",
-    "vue-tsc": "^1.2"
+    "vue-tsc": "^1.2",
+    "vuepress": "^2.0.0-beta.61"
   }
 }
