--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "node": "18.12.0"
   },
   "scripts": {
-    "prepare": "husky install",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint:js": "eslint --ext \".ts,.js,.vue\" .",
-    "lintfix:js": "eslint --fix --ext \".ts,.js,.vue\" .",
-    "lint:styles": "stylelint **/*.{scss,vue}",
-    "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
-    "lint:prettier": "prettier --check .",
-    "lintfix:prettier": "prettier --write --list-different .",
-    "typecheck": "vue-tsc --noEmit",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "app:build": "vite build",
+    "app:dev": "vite",
+    "app:preview": "vite preview",
+    "docs:build": "vitepress build src/docs",
+    "docs:dev": "vitepress dev src/docs",
+    "docs:preview": "vitepress preview src/docs",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --component --browser chrome",
-    "packages-check-updates": "npx npm-check-updates",
-    "packages-update": "npx npm-check-updates -u",
-    "docs:dev": "vitepress dev src/docs",
-    "docs:build": "vitepress build src/docs",
-    "docs:preview": "vitepress preview src/docs"
+    "lint:js": "eslint --ext \".ts,.js,.vue\" .",
+    "lint:prettier": "prettier --check .",
+    "lint:styles": "stylelint **/*.{scss,vue}",
+    "lint:types": "vue-tsc --noEmit",
+    "lintfix:js": "eslint --fix --ext \".ts,.js,.vue\" .",
+    "lintfix:prettier": "prettier --write --list-different .",
+    "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
+    "npm:check-updates": "npx npm-check-updates",
+    "npm:update-packages": "npx npm-check-updates -u",
+    "prepare": "husky install",
+    "vitest:dev": "vitest",
+    "vitest:run": "vitest run"
   },
   "dependencies": {
     "pinia": "^2.0.35",
