--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --component --browser chrome",
     "lint:js": "eslint --ext \".ts,.js,.vue\" .",
-    "lint:prettier": "prettier --check .",
+    "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
     "lint:styles": "stylelint **/*.{scss,vue}",
     "lint:types": "vue-tsc --noEmit",
     "lintfix:js": "eslint --fix --ext \".ts,.js,.vue\" .",
-    "lintfix:prettier": "prettier --write --list-different .",
+    "lintfix:prettier": "prettier --config ./src/configs/prettier.config.js --write --list-different .",
     "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
     "npm:check-updates": "npx npm-check-updates",
     "npm:update-packages": "npx npm-check-updates -u",
