--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "docs:preview": "vitepress preview src/docs",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --component --browser chrome",
-    "lint:js": "eslint --ext \".ts,.js,.vue\" .",
+    "lint:js": "eslint -c ./src/configs/eslint.config.js --ext \".ts,.js,.vue\" .",
     "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
     "lint:styles": "stylelint **/*.{scss,vue}",
     "lint:types": "vue-tsc --noEmit",
-    "lintfix:js": "eslint --fix --ext \".ts,.js,.vue\" .",
+    "lintfix:js": "eslint -c ./src/configs/eslint.config.js --fix --ext \".ts,.js,.vue\" .",
     "lintfix:prettier": "prettier --config ./src/configs/prettier.config.js --write --list-different .",
     "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
     "npm:check-updates": "npx npm-check-updates",
