--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cypress:run": "cypress run --component --browser chrome",
     "lint:js": "eslint -c ./src/configs/eslint.config.js --ext \".ts,.js,.vue\" .",
     "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
+    "lint:staged": "npx lint-staged --config ./src/configs/lint-staged.config.js --no-stash",
     "lint:styles": "stylelint **/*.{scss,vue}",
     "lint:types": "vue-tsc --noEmit",
     "lintfix:js": "eslint -c ./src/configs/eslint.config.js --fix --ext \".ts,.js,.vue\" .",
