--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "lint:js": "eslint -c ./src/configs/eslint.config.js --ext \".ts,.js,.vue\" .",
     "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
     "lint:staged": "npx lint-staged --config ./src/configs/lint-staged.config.js --no-stash",
-    "lint:styles": "stylelint **/*.{scss,vue}",
+    "lint:styles": "stylelint --config ./src/configs/stylelint.config.js **/*.{scss,vue}",
     "lint:types": "vue-tsc --noEmit",
     "lintfix:js": "eslint -c ./src/configs/eslint.config.js --fix --ext \".ts,.js,.vue\" .",
     "lintfix:prettier": "prettier --config ./src/configs/prettier.config.js --write --list-different .",
-    "lintfix:styles": "stylelint **/*.{scss,vue} --fix",
+    "lintfix:styles": "stylelint --config ./src/configs/stylelint.config.js **/*.{scss,vue} --fix",
     "npm:check-updates": "npx npm-check-updates",
     "npm:update-packages": "npx npm-check-updates -u",
     "prepare": "husky install",
