--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "docs:build": "vitepress build src/docs",
     "docs:dev": "vitepress dev src/docs",
     "docs:preview": "vitepress preview src/docs",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run --component --browser chrome",
+    "cypress:open": "NODE_ENV=test cypress open --config-file ./src/configs/cypress.config.ts",
+    "cypress:run": "NODE_ENV=test cypress run --config-file ./src/configs/cypress.config.ts --component --browser chrome",
     "lint:js": "eslint -c ./src/configs/eslint.config.js --ext \".ts,.js,.vue\" .",
     "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
     "lint:staged": "npx lint-staged --config ./src/configs/lint-staged.config.js --no-stash",
@@ -31,26 +31,26 @@
     "npm:check-updates": "npx npm-check-updates",
     "npm:update-packages": "npx npm-check-updates -u",
     "prepare": "husky install",
-    "vitest:dev": "vitest ",
+    "vitest:dev": "vitest",
     "vitest:run": "vitest run"
   },
   "dependencies": {
-    "pinia": "^2.0.35",
-    "vue": "^3.2.47",
+    "pinia": "^2.0.36",
+    "vue": "^3.3.2",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@pinia/testing": "^0.0.16",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@vitejs/plugin-vue": "^4.2.1",
+    "@pinia/testing": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
-    "cypress": "^12.11.0",
-    "eslint": "^8.39.0",
+    "cypress": "^12.12.0",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint-plugin-vue": "^9.12.0",
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
@@ -62,12 +62,12 @@
     "stylelint-config-recommended-scss": "^11.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.4",
+    "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-vue-markdown": "^0.22.6",
+    "vite-plugin-vue-markdown": "^0.23.4",
     "vite-tsconfig-paths": "^4.2.0",
     "vitepress": "^1.0.0-alpha.75",
-    "vitest": "^0.30.1",
+    "vitest": "^0.31.0",
     "vue-tsc": "^1.6"
   }
 }
