--- a/package.json
+++ b/package.json
@@ -52,22 +52,22 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-vue": "^9.14.1",
     "husky": "^8.0.3",
-    "jsdom": "^22.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.1",
-    "stylelint-config-recommended-scss": "^11.0.0",
+    "stylelint": "^15.6.3",
+    "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vue-markdown": "^0.23.4",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitepress": "^1.0.0-alpha.75",
-    "vitest": "^0.31.0",
+    "vitepress": "^1.0.0-beta.1",
+    "vitest": "^0.31.4",
     "vue-tsc": "^1.6"
   }
 }
