--- a/package.json
+++ b/package.json
@@ -35,39 +35,39 @@
     "vitest:run": "vitest run"
   },
   "dependencies": {
-    "pinia": "^2.0.36",
-    "vue": "^3.3.2",
+    "pinia": "^2.1.3",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@pinia/testing": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "@pinia/testing": "^0.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
-    "cypress": "^12.12.0",
-    "eslint": "^8.40.0",
+    "cypress": "^12.13.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-vue": "^9.12.0",
+    "eslint-plugin-vue": "^9.14.1",
     "husky": "^8.0.3",
-    "jsdom": "^22.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.1",
-    "stylelint-config-recommended-scss": "^11.0.0",
+    "stylelint": "^15.6.3",
+    "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-vue-markdown": "^0.23.4",
+    "vite-plugin-vue-markdown": "^0.23.5",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitepress": "^1.0.0-alpha.75",
-    "vitest": "^0.31.0",
+    "vitepress": "^1.0.0-beta.1",
+    "vitest": "^0.31.4",
     "vue-tsc": "^1.6"
   }
 }
