--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@pinia/testing": "^0.1.2",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-vue": "^4.2.3",
